Bug 31551 - Lines in legend not shown with current width
Summary: Lines in legend not shown with current width
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Chart (show other bugs)
Version:
(earliest affected)
Inherited From OOo
Hardware: x86 (IA32) Windows (All)
: medium normal
Assignee: Kohei Yoshida
URL:
Whiteboard: target:3.6.0 target:3.5.2 target:4.3....
Keywords:
Depends on:
Blocks:
 
Reported: 2010-11-11 06:30 UTC by Rainer Bielefeld Retired
Modified: 2023-10-12 11:31 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
Sample document (26.21 KB, application/vnd.oasis.opendocument.spreadsheet)
2010-11-11 06:30 UTC, Rainer Bielefeld Retired
Details
Sample document (43.64 KB, application/vnd.oasis.opendocument.spreadsheet)
2012-01-23 22:14 UTC, Rainer Bielefeld Retired
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Rainer Bielefeld Retired 2010-11-11 06:30:59 UTC
Created attachment 40204 [details]
Sample document

I checked with LibreOffice 3.3.0  -  WIN XP DE [OOO330m9 (Build:1 - build 3.2.99.2)] 

From OOo I have been used to see lines from line diagram in legend with same width as data line in diagram.

Steps to reproduce:
1. open attached spreadsheet "sample0"
   expected: in legend line should be shown with width 3mm
   actual: default width
2. Doubleclick chart to get edit mode
3. click Legend to select it
4. click line in legend for "a"
5. Check properties: indeed 3mm is selected

Other properties (transparency, line type) will be shown correctly.

When you open spreadsheet with OOo 3.1.1, Line view in legend will be corrected after double click on chart.
Comment 1 Petr Mladek 2010-11-18 08:44:20 UTC
I see this with LibO-3.3-beta3 on SLED11-SP1 as well.

Kohei, is this a bug or feature?
Could the fix be an easy task? ;-)
Comment 2 Kohei Yoshida 2010-11-18 09:15:12 UTC
(In reply to comment #1)
> I see this with LibO-3.3-beta3 on SLED11-SP1 as well.
> 
> Kohei, is this a bug or feature?

No clue.  But I'd call it a bug.

> Could the fix be an easy task? ;-)

No idea.  It sounds easy, but the chart's code is pretty convoluted there, so figuring that out will not be easy.

But once you figure out that code, I'm pretty sure the code change will be small.
Comment 3 Rainer Bielefeld Retired 2010-11-18 21:40:47 UTC
Modified component because now available.
Comment 4 Rainer Bielefeld Retired 2011-04-10 06:50:21 UTC
Modified status due to facts
Comment 5 Rainer Bielefeld Retired 2012-01-23 22:14:56 UTC
Created attachment 56061 [details]
Sample document

"Real Life" problem
Comment 6 Not Assigned 2012-02-20 13:29:28 UTC
Katarina Machalkova committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=fd33b0d28e9f73b4911b43bedf334296b8025485

fdo#31551: Show actual line width in the legend
Comment 7 Not Assigned 2012-03-16 08:08:10 UTC
Katarina Machalkova committed a patch related to this issue.
It has been pushed to "libreoffice-3-5":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=4ce99d42806e87378614207c8d5adf38d43c756c&g=libreoffice-3-5

fdo#31551: Show actual line width in the legend


It will be available in LibreOffice 3.5.2.
Comment 8 Rainer Bielefeld Retired 2012-03-20 10:33:16 UTC
Works for me with parallel Server installation of "LOdev 3.5.2rc0+  [Build ID: ec752de-73cb0b8-f269e46] Win-x86@6-fast pull time 2012-03-19 11:08:23 – WIN7 Home Premium (64bit), FIXED due to comments 6,7
Comment 9 Commit Notification 2014-02-26 06:38:44 UTC
Markus Mohrhard committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=c816729beb6ad79fedf3566dbfccdc17f4dc1584

fix OOXML validation error for text shapes, related fdo#31551



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 10 Buovjaga 2023-10-12 11:31:01 UTC
Notes for unit test writers:

Revert has to be done manually.

There is test code for checking the width and height of legends in chart2/qa/extras/chart2dump/chart2dump.cxx but it was commented out in 911b42b0cdd283bc8bc7de50471a2d4b9603d8c7