fdo#31551: Show actual line width in the legend

however, limit the line width from above by legend entry height
(which +- matches the font height)

Signed-off-by: Thorsten Behrens <tbehrens@suse.com>